<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shade_line_bg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tracking_id"
            app:startIconDrawable="@drawable/ic_fast_delivery"
            android:layout_marginBottom="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            android:padding="8dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delivery_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_delivery_partner"
        android:textSize="18sp"
        android:padding="4dp"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/purple_500"/>

</androidx.appcompat.widget.LinearLayoutCompat>